package modelo;

public enum Moneda {
    ARS,
    USD
}
