package modelo;

public enum TipoCuenta {
    CAJA_AHORRO,
    CUENTA_CORRIENTE
}
